@@ -60,3 +60,219 @@ lib/Number/Phone/NANP/Data.pm
 lib/Number/Phone/NANP/SX.pm
 lib/Number/Phone/UK/IM.pm
 t/02_weird_little_islands.t
+t/40-no-stubs.t
+lib/Number/Phone/StubCountry/AC.pm
+lib/Number/Phone/StubCountry/AD.pm
+lib/Number/Phone/StubCountry/AE.pm
+lib/Number/Phone/StubCountry/AF.pm
+lib/Number/Phone/StubCountry/AL.pm
+lib/Number/Phone/StubCountry/AM.pm
+lib/Number/Phone/StubCountry/AN.pm
+lib/Number/Phone/StubCountry/AO.pm
+lib/Number/Phone/StubCountry/AR.pm
+lib/Number/Phone/StubCountry/AT.pm
+lib/Number/Phone/StubCountry/AU.pm
+lib/Number/Phone/StubCountry/AW.pm
+lib/Number/Phone/StubCountry/AX.pm
+lib/Number/Phone/StubCountry/AZ.pm
+lib/Number/Phone/StubCountry/BA.pm
+lib/Number/Phone/StubCountry/BD.pm
+lib/Number/Phone/StubCountry/BE.pm
+lib/Number/Phone/StubCountry/BF.pm
+lib/Number/Phone/StubCountry/BG.pm
+lib/Number/Phone/StubCountry/BH.pm
+lib/Number/Phone/StubCountry/BI.pm
+lib/Number/Phone/StubCountry/BJ.pm
+lib/Number/Phone/StubCountry/BL.pm
+lib/Number/Phone/StubCountry/BN.pm
+lib/Number/Phone/StubCountry/BO.pm
+lib/Number/Phone/StubCountry/BR.pm
+lib/Number/Phone/StubCountry/BT.pm
+lib/Number/Phone/StubCountry/BW.pm
+lib/Number/Phone/StubCountry/BY.pm
+lib/Number/Phone/StubCountry/BZ.pm
+lib/Number/Phone/StubCountry/CC.pm
+lib/Number/Phone/StubCountry/CD.pm
+lib/Number/Phone/StubCountry/CF.pm
+lib/Number/Phone/StubCountry/CG.pm
+lib/Number/Phone/StubCountry/CH.pm
+lib/Number/Phone/StubCountry/CI.pm
+lib/Number/Phone/StubCountry/CK.pm
+lib/Number/Phone/StubCountry/CL.pm
+lib/Number/Phone/StubCountry/CM.pm
+lib/Number/Phone/StubCountry/CN.pm
+lib/Number/Phone/StubCountry/CO.pm
+lib/Number/Phone/StubCountry/CR.pm
+lib/Number/Phone/StubCountry/CU.pm
+lib/Number/Phone/StubCountry/CV.pm
+lib/Number/Phone/StubCountry/CY.pm
+lib/Number/Phone/StubCountry/CX.pm
+lib/Number/Phone/StubCountry/CZ.pm
+lib/Number/Phone/StubCountry/DE.pm
+lib/Number/Phone/StubCountry/DJ.pm
+lib/Number/Phone/StubCountry/DK.pm
+lib/Number/Phone/StubCountry/DZ.pm
+lib/Number/Phone/StubCountry/EC.pm
+lib/Number/Phone/StubCountry/EE.pm
+lib/Number/Phone/StubCountry/EG.pm
+lib/Number/Phone/StubCountry/ER.pm
+lib/Number/Phone/StubCountry/ES.pm
+lib/Number/Phone/StubCountry/ET.pm
+lib/Number/Phone/StubCountry/FI.pm
+lib/Number/Phone/StubCountry/FJ.pm
+lib/Number/Phone/StubCountry/FK.pm
+lib/Number/Phone/StubCountry/FM.pm
+lib/Number/Phone/StubCountry/FO.pm
+lib/Number/Phone/StubCountry/FR.pm
+lib/Number/Phone/StubCountry/GA.pm
+lib/Number/Phone/StubCountry/MOCK.pm
+lib/Number/Phone/StubCountry/GE.pm
+lib/Number/Phone/StubCountry/GF.pm
+lib/Number/Phone/StubCountry/GG.pm
+lib/Number/Phone/StubCountry/GH.pm
+lib/Number/Phone/StubCountry/GI.pm
+lib/Number/Phone/StubCountry/GL.pm
+lib/Number/Phone/StubCountry/GM.pm
+lib/Number/Phone/StubCountry/GN.pm
+lib/Number/Phone/StubCountry/GP.pm
+lib/Number/Phone/StubCountry/GQ.pm
+lib/Number/Phone/StubCountry/GR.pm
+lib/Number/Phone/StubCountry/GT.pm
+lib/Number/Phone/StubCountry/GW.pm
+lib/Number/Phone/StubCountry/GY.pm
+lib/Number/Phone/StubCountry/HK.pm
+lib/Number/Phone/StubCountry/HN.pm
+lib/Number/Phone/StubCountry/HR.pm
+lib/Number/Phone/StubCountry/HT.pm
+lib/Number/Phone/StubCountry/HU.pm
+lib/Number/Phone/StubCountry/ID.pm
+lib/Number/Phone/StubCountry/IE.pm
+lib/Number/Phone/StubCountry/IL.pm
+lib/Number/Phone/StubCountry/IM.pm
+lib/Number/Phone/StubCountry/IN.pm
+lib/Number/Phone/StubCountry/IO.pm
+lib/Number/Phone/StubCountry/IQ.pm
+lib/Number/Phone/StubCountry/IR.pm
+lib/Number/Phone/StubCountry/IS.pm
+lib/Number/Phone/StubCountry/IT.pm
+lib/Number/Phone/StubCountry/JE.pm
+lib/Number/Phone/StubCountry/JO.pm
+lib/Number/Phone/StubCountry/JP.pm
+lib/Number/Phone/StubCountry/KE.pm
+lib/Number/Phone/StubCountry/KG.pm
+lib/Number/Phone/StubCountry/KH.pm
+lib/Number/Phone/StubCountry/KI.pm
+lib/Number/Phone/StubCountry/KM.pm
+lib/Number/Phone/StubCountry/KP.pm
+lib/Number/Phone/StubCountry/KR.pm
+lib/Number/Phone/StubCountry/KW.pm
+lib/Number/Phone/StubCountry/KZ.pm
+lib/Number/Phone/StubCountry/LA.pm
+lib/Number/Phone/StubCountry/LB.pm
+lib/Number/Phone/StubCountry/LI.pm
+lib/Number/Phone/StubCountry/LK.pm
+lib/Number/Phone/StubCountry/LR.pm
+lib/Number/Phone/StubCountry/LS.pm
+lib/Number/Phone/StubCountry/LT.pm
+lib/Number/Phone/StubCountry/LU.pm
+lib/Number/Phone/StubCountry/LV.pm
+lib/Number/Phone/StubCountry/LY.pm
+lib/Number/Phone/StubCountry/MA.pm
+lib/Number/Phone/StubCountry/MC.pm
+lib/Number/Phone/StubCountry/MD.pm
+lib/Number/Phone/StubCountry/ME.pm
+lib/Number/Phone/StubCountry/MG.pm
+lib/Number/Phone/StubCountry/MF.pm
+lib/Number/Phone/StubCountry/MH.pm
+lib/Number/Phone/StubCountry/MK.pm
+lib/Number/Phone/StubCountry/ML.pm
+lib/Number/Phone/StubCountry/MM.pm
+lib/Number/Phone/StubCountry/MN.pm
+lib/Number/Phone/StubCountry/MO.pm
+lib/Number/Phone/StubCountry/MQ.pm
+lib/Number/Phone/StubCountry/MR.pm
+lib/Number/Phone/StubCountry/MT.pm
+lib/Number/Phone/StubCountry/MU.pm
+lib/Number/Phone/StubCountry/MV.pm
+lib/Number/Phone/StubCountry/MW.pm
+lib/Number/Phone/StubCountry/MX.pm
+lib/Number/Phone/StubCountry/MY.pm
+lib/Number/Phone/StubCountry/MZ.pm
+lib/Number/Phone/StubCountry/NA.pm
+lib/Number/Phone/StubCountry/NC.pm
+lib/Number/Phone/StubCountry/NE.pm
+lib/Number/Phone/StubCountry/NF.pm
+lib/Number/Phone/StubCountry/NG.pm
+lib/Number/Phone/StubCountry/NI.pm
+lib/Number/Phone/StubCountry/NL.pm
+lib/Number/Phone/StubCountry/NO.pm
+lib/Number/Phone/StubCountry/NP.pm
+lib/Number/Phone/StubCountry/NR.pm
+lib/Number/Phone/StubCountry/NU.pm
+lib/Number/Phone/StubCountry/NZ.pm
+lib/Number/Phone/StubCountry/OM.pm
+lib/Number/Phone/StubCountry/PA.pm
+lib/Number/Phone/StubCountry/PE.pm
+lib/Number/Phone/StubCountry/PF.pm
+lib/Number/Phone/StubCountry/PG.pm
+lib/Number/Phone/StubCountry/PH.pm
+lib/Number/Phone/StubCountry/PK.pm
+lib/Number/Phone/StubCountry/PL.pm
+lib/Number/Phone/StubCountry/PM.pm
+lib/Number/Phone/StubCountry/PS.pm
+lib/Number/Phone/StubCountry/PT.pm
+lib/Number/Phone/StubCountry/PW.pm
+lib/Number/Phone/StubCountry/PY.pm
+lib/Number/Phone/StubCountry/QA.pm
+lib/Number/Phone/StubCountry/RE.pm
+lib/Number/Phone/StubCountry/RO.pm
+lib/Number/Phone/StubCountry/RS.pm
+lib/Number/Phone/StubCountry/RU.pm
+lib/Number/Phone/StubCountry/RW.pm
+lib/Number/Phone/StubCountry/SA.pm
+lib/Number/Phone/StubCountry/SB.pm
+lib/Number/Phone/StubCountry/SC.pm
+lib/Number/Phone/StubCountry/SD.pm
+lib/Number/Phone/StubCountry/SE.pm
+lib/Number/Phone/StubCountry/SG.pm
+lib/Number/Phone/StubCountry/SH.pm
+lib/Number/Phone/StubCountry/SI.pm
+lib/Number/Phone/StubCountry/SJ.pm
+lib/Number/Phone/StubCountry/SK.pm
+lib/Number/Phone/StubCountry/SL.pm
+lib/Number/Phone/StubCountry/SM.pm
+lib/Number/Phone/StubCountry/SN.pm
+lib/Number/Phone/StubCountry/SO.pm
+lib/Number/Phone/StubCountry/SR.pm
+lib/Number/Phone/StubCountry/ST.pm
+lib/Number/Phone/StubCountry/SV.pm
+lib/Number/Phone/StubCountry/SY.pm
+lib/Number/Phone/StubCountry/SZ.pm
+lib/Number/Phone/StubCountry/TD.pm
+lib/Number/Phone/StubCountry/TG.pm
+lib/Number/Phone/StubCountry/TH.pm
+lib/Number/Phone/StubCountry/TJ.pm
+lib/Number/Phone/StubCountry/TK.pm
+lib/Number/Phone/StubCountry/TL.pm
+lib/Number/Phone/StubCountry/TM.pm
+lib/Number/Phone/StubCountry/TN.pm
+lib/Number/Phone/StubCountry/TO.pm
+lib/Number/Phone/StubCountry/TR.pm
+lib/Number/Phone/StubCountry/TV.pm
+lib/Number/Phone/StubCountry/TW.pm
+lib/Number/Phone/StubCountry/TZ.pm
+lib/Number/Phone/StubCountry/UA.pm
+lib/Number/Phone/StubCountry/UG.pm
+lib/Number/Phone/StubCountry/UY.pm
+lib/Number/Phone/StubCountry/UZ.pm
+lib/Number/Phone/StubCountry/VA.pm
+lib/Number/Phone/StubCountry/VE.pm
+lib/Number/Phone/StubCountry/VN.pm
+lib/Number/Phone/StubCountry/VU.pm
+lib/Number/Phone/StubCountry/WF.pm
+lib/Number/Phone/StubCountry/WS.pm
+lib/Number/Phone/StubCountry/YE.pm
+lib/Number/Phone/StubCountry/YT.pm
+lib/Number/Phone/StubCountry/ZA.pm
+lib/Number/Phone/StubCountry/ZM.pm
+lib/Number/Phone/StubCountry/ZW.pm
